<resources>
    <string name="app_name">GoodZone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalog">Catalog</string>
    <string name="favorite">Favorite</string>
    <string name="autification">Autification</string>
    <string name="authfication">Authfication</string>
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>
    <string name="discount">Discount</string>
    <string name="all">All</string>
    <string name="product">Product</string>
    <string name="product_category">Product Category</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="popular_prducts">Popular products</string>
</resources>